--- a/fast64_internal/f3d/node_library/TileRepeatSettings.json
+++ b/fast64_internal/f3d/node_library/TileRepeatSettings.json
@@ -3,22 +3,34 @@
 	"nodes": {
 		"Combine XYZ": {
 			"bl_idname": "ShaderNodeCombineXYZ",
+			"location": [
+				1419.4938,
+				156.8046
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
-			"location": [
-				1419.4937744140625,
-				156.80458068847656
-			],
 			"width": 140.0,
+			"inputs": {
+				"0": {
+					"name": "X"
+				},
+				"1": {
+					"name": "Y"
+				},
+				"2": {
+					"name": "Z"
+				}
+			},
 			"outputs": {
 				"0": {
+					"name": "Vector",
 					"links": [
 						{
 							"node": "Group Output",
-							"socket": "Vector"
+							"index": 0
 						}
 					]
 				}
@@ -26,14 +38,14 @@
 		},
 		"Math.003": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				453.1531,
+				-12.2871
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				453.15313720703125,
-				-12.287078857421875
 			],
 			"operation": "PINGPONG",
 			"use_clamp": false,
@@ -51,10 +63,11 @@
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Group.002",
-							"socket": "Input1"
+							"index": 2
 						}
 					]
 				}
@@ -62,14 +75,14 @@
 		},
 		"Math.005": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				-101.5424,
+				-25.3512
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				-101.54240417480469,
-				-25.3511962890625
 			],
 			"operation": "MAXIMUM",
 			"use_clamp": false,
@@ -78,16 +91,18 @@
 				"0": {
 					"default_value": 0.5
 				},
+				"1": {},
 				"2": {
 					"enabled": false
 				}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Math.004",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -95,27 +110,33 @@
 		},
 		"Reroute.002": {
 			"bl_idname": "NodeReroute",
+			"location": [
+				-262.2361,
+				-295.0883
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
 			"label": "Y",
-			"location": [
-				-262.2360534667969,
-				-295.0882873535156
-			],
 			"width": 16.0,
+			"inputs": {
+				"0": {
+					"name": "Input"
+				}
+			},
 			"outputs": {
 				"0": {
+					"name": "Output",
 					"links": [
 						{
 							"node": "Group.003",
-							"socket": "Input0"
+							"index": 1
 						},
 						{
 							"node": "Math.005",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -123,14 +144,14 @@
 		},
 		"Group.003": {
 			"bl_idname": "ShaderNodeGroup",
+			"location": [
+				265.99,
+				-186.3034
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				265.9900207519531,
-				-186.30337524414062
 			],
 			"node_tree": {
 				"serialized_type": "NodeTree",
@@ -139,27 +160,31 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
+					"name": "Fac",
 					"default_value": 0.5
 				},
 				"1": {
+					"name": "Input0",
 					"default_value": 0.5,
 					"hide_value": true
 				},
 				"2": {
+					"name": "Input1",
 					"default_value": 0.5,
 					"hide_value": true
 				}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Group.002",
-							"socket": "Input0"
+							"index": 1
 						},
 						{
 							"node": "Math.003",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -167,14 +192,14 @@
 		},
 		"Group.002": {
 			"bl_idname": "ShaderNodeGroup",
+			"location": [
+				630.3589,
+				-186.3034
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				630.35888671875,
-				-186.30337524414062
 			],
 			"node_tree": {
 				"serialized_type": "NodeTree",
@@ -183,23 +208,27 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
+					"name": "Fac",
 					"default_value": 0.5
 				},
 				"1": {
+					"name": "Input0",
 					"default_value": 0.5,
 					"hide_value": true
 				},
 				"2": {
+					"name": "Input1",
 					"default_value": 0.5,
 					"hide_value": true
 				}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Combine XYZ",
-							"socket": "Y"
+							"index": 1
 						}
 					]
 				}
@@ -207,28 +236,36 @@
 		},
 		"Group Output": {
 			"bl_idname": "NodeGroupOutput",
+			"location": [
+				1620.3417,
+				147.1939
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
 			"is_active_output": true,
-			"location": [
-				1620.3416748046875,
-				147.1938934326172
-			],
-			"width": 140.0
+			"width": 140.0,
+			"inputs": {
+				"0": {
+					"name": "Vector"
+				},
+				"1": {
+					"name": ""
+				}
+			}
 		},
 		"Math.004": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				55.0337,
+				-25.3512
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				55.03367614746094,
-				-25.3511962890625
 			],
 			"operation": "MINIMUM",
 			"use_clamp": false,
@@ -246,10 +283,11 @@
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Group.003",
-							"socket": "Input1"
+							"index": 2
 						}
 					]
 				}
@@ -257,23 +295,29 @@
 		},
 		"Reroute.001": {
 			"bl_idname": "NodeReroute",
+			"location": [
+				-262.2361,
+				88.3516
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
 			"label": "Y",
-			"location": [
-				-262.2360534667969,
-				88.35157775878906
-			],
 			"width": 16.0,
+			"inputs": {
+				"0": {
+					"name": "Input"
+				}
+			},
 			"outputs": {
 				"0": {
+					"name": "Output",
 					"links": [
 						{
 							"node": "Reroute.002",
-							"socket": "Input"
+							"index": 0
 						}
 					]
 				}
@@ -281,14 +325,14 @@
 		},
 		"Math.007": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				43.0973,
+				575.1196
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				43.0972900390625,
-				575.11962890625
 			],
 			"operation": "ADD",
 			"use_clamp": false,
@@ -307,10 +351,11 @@
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Reroute.003",
-							"socket": "Input"
+							"index": 0
 						}
 					]
 				}
@@ -318,27 +363,33 @@
 		},
 		"Reroute": {
 			"bl_idname": "NodeReroute",
+			"location": [
+				-262.2361,
+				170.7375
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
 			"label": "X",
-			"location": [
-				-262.2360534667969,
-				170.73748779296875
-			],
 			"width": 16.0,
+			"inputs": {
+				"0": {
+					"name": "Input"
+				}
+			},
 			"outputs": {
 				"0": {
+					"name": "Output",
 					"links": [
 						{
 							"node": "Math.006",
-							"socket": 0
+							"index": 0
 						},
 						{
 							"node": "Math.008",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -346,14 +397,14 @@
 		},
 		"Math.008": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				-176.9027,
+				395.8094
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				-176.9027099609375,
-				395.8094177246094
 			],
 			"operation": "FLOOR",
 			"use_clamp": false,
@@ -373,10 +424,11 @@
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Math.007",
-							"socket": 1
+							"index": 1
 						}
 					]
 				}
@@ -384,14 +436,14 @@
 		},
 		"Math.006": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				-269.8411,
+				610.2584
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				-269.841064453125,
-				610.2584228515625
 			],
 			"operation": "WRAP",
 			"use_clamp": false,
@@ -402,14 +454,16 @@
 				},
 				"1": {
 					"default_value": 0.5
-				}
+				},
+				"2": {}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Math.007",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -417,27 +471,33 @@
 		},
 		"Reroute.003": {
 			"bl_idname": "NodeReroute",
+			"location": [
+				306.9469,
+				385.2227
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
 			"label": "X",
-			"location": [
-				306.9469299316406,
-				385.2226867675781
-			],
 			"width": 16.0,
+			"inputs": {
+				"0": {
+					"name": "Input"
+				}
+			},
 			"outputs": {
 				"0": {
+					"name": "Output",
 					"links": [
 						{
 							"node": "Math",
-							"socket": 0
+							"index": 0
 						},
 						{
 							"node": "Group",
-							"socket": "Input0"
+							"index": 1
 						}
 					]
 				}
@@ -445,80 +505,88 @@
 		},
 		"Group Input": {
 			"bl_idname": "NodeGroupInput",
+			"location": [
+				-497.9263,
+				50.5328
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
 			],
-			"location": [
-				-497.9263000488281,
-				50.532772064208984
-			],
 			"width": 140.0,
 			"outputs": {
 				"0": {
+					"name": "X",
 					"hide_value": true,
 					"links": [
 						{
 							"node": "Reroute",
-							"socket": "Input"
+							"index": 0
 						}
 					]
 				},
 				"1": {
+					"name": "Y",
 					"hide_value": true,
 					"links": [
 						{
 							"node": "Reroute.001",
-							"socket": "Input"
+							"index": 0
 						}
 					]
 				},
 				"2": {
+					"name": "ClampX",
 					"links": [
 						{
 							"node": "Group",
-							"socket": "Fac"
+							"index": 0
 						}
 					]
 				},
 				"3": {
+					"name": "ClampY",
 					"links": [
 						{
 							"node": "Group.003",
-							"socket": "Fac"
+							"index": 0
 						}
 					]
 				},
 				"4": {
+					"name": "MirrorX",
 					"links": [
 						{
 							"node": "Group.001",
-							"socket": "Fac"
+							"index": 0
 						}
 					]
 				},
 				"5": {
+					"name": "MirrorY",
 					"links": [
 						{
 							"node": "Group.002",
-							"socket": "Fac"
+							"index": 0
 						}
 					]
 				},
 				"6": {
+					"name": "XHigh",
 					"links": [
 						{
 							"node": "Math.002",
-							"socket": 1
+							"index": 1
 						}
 					]
 				},
 				"7": {
+					"name": "YHigh",
 					"links": [
 						{
 							"node": "Math.004",
-							"socket": 1
+							"index": 1
 						}
 					]
 				}
@@ -526,14 +594,14 @@
 		},
 		"Math": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				408.5739,
+				785.7515
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				408.57391357421875,
-				785.75146484375
 			],
 			"operation": "MAXIMUM",
 			"use_clamp": false,
@@ -542,16 +610,18 @@
 				"0": {
 					"default_value": 0.5
 				},
+				"1": {},
 				"2": {
 					"enabled": false
 				}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Math.002",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -559,14 +629,14 @@
 		},
 		"Group.001": {
 			"bl_idname": "ShaderNodeGroup",
+			"location": [
+				1140.4752,
+				624.7993
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				1140.4752197265625,
-				624.7992553710938
 			],
 			"node_tree": {
 				"serialized_type": "NodeTree",
@@ -575,23 +645,27 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
+					"name": "Fac",
 					"default_value": 0.5
 				},
 				"1": {
+					"name": "Input0",
 					"default_value": 0.5,
 					"hide_value": true
 				},
 				"2": {
+					"name": "Input1",
 					"default_value": 0.5,
 					"hide_value": true
 				}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Combine XYZ",
-							"socket": "X"
+							"index": 0
 						}
 					]
 				}
@@ -599,14 +673,14 @@
 		},
 		"Math.002": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				580.5505,
+				710.9398
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				580.550537109375,
-				710.9397583007812
 			],
 			"operation": "MINIMUM",
 			"use_clamp": false,
@@ -624,10 +698,11 @@
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Group",
-							"socket": "Input1"
+							"index": 2
 						}
 					]
 				}
@@ -635,14 +710,14 @@
 		},
 		"Math.001": {
 			"bl_idname": "ShaderNodeMath",
+			"location": [
+				963.2695,
+				798.8156
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				963.26953125,
-				798.8156127929688
 			],
 			"operation": "PINGPONG",
 			"use_clamp": false,
@@ -660,10 +735,11 @@
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Group.001",
-							"socket": "Input1"
+							"index": 2
 						}
 					]
 				}
@@ -671,14 +747,14 @@
 		},
 		"Group": {
 			"bl_idname": "ShaderNodeGroup",
+			"location": [
+				776.1063,
+				624.7993
+			],
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
 				0.6079999804496765
-			],
-			"location": [
-				776.1062622070312,
-				624.7992553710938
 			],
 			"node_tree": {
 				"serialized_type": "NodeTree",
@@ -687,27 +763,31 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
+					"name": "Fac",
 					"default_value": 0.5
 				},
 				"1": {
+					"name": "Input0",
 					"default_value": 0.5,
 					"hide_value": true
 				},
 				"2": {
+					"name": "Input1",
 					"default_value": 0.5,
 					"hide_value": true
 				}
 			},
 			"outputs": {
 				"0": {
+					"name": "Value",
 					"links": [
 						{
 							"node": "Group.001",
-							"socket": "Input0"
+							"index": 1
 						},
 						{
 							"node": "Math.001",
-							"socket": 0
+							"index": 0
 						}
 					]
 				}
@@ -716,72 +796,72 @@
 	},
 	"inputs": [
 		{
-			"hide_value": true,
 			"name": "X",
-			"bl_idname": "NodeSocketFloat"
-		},
-		{
 			"hide_value": true,
-			"name": "Y",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"max_value": 1,
-			"min_value": 0,
+			"name": "Y",
+			"hide_value": true,
+			"bl_idname": "NodeSocketFloat"
+		},
+		{
 			"name": "ClampX",
+			"max_value": 1,
+			"min_value": 0,
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"max_value": 1,
-			"min_value": 0,
 			"name": "ClampY",
+			"max_value": 1,
+			"min_value": 0,
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"max_value": 1,
-			"min_value": 0,
 			"name": "MirrorX",
-			"bl_idname": "NodeSocketInt"
-		},
-		{
 			"max_value": 1,
 			"min_value": 0,
-			"name": "MirrorY",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
+			"name": "MirrorY",
+			"max_value": 1,
+			"min_value": 0,
+			"bl_idname": "NodeSocketInt"
+		},
+		{
+			"name": "XHigh",
 			"default_value": 32.0,
 			"max_value": 1023.75,
 			"min_value": 0.0,
-			"name": "XHigh",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
+			"name": "YHigh",
 			"max_value": 1023.75,
 			"min_value": 0.0,
-			"name": "YHigh",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
+			"name": "MaskX",
 			"max_value": 5,
 			"min_value": 0,
-			"name": "MaskX",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
+			"name": "MaskY",
 			"max_value": 5,
 			"min_value": 0,
-			"name": "MaskY",
 			"bl_idname": "NodeSocketInt"
 		}
 	],
 	"outputs": [
 		{
+			"name": "Vector",
 			"max_value": 0.0,
 			"min_value": 0.0,
-			"name": "Vector",
 			"bl_idname": "NodeSocketVector"
 		}
 	],
-	"cached_hash": "f68aa9c026c030d8e26073fe2f745674"
+	"cached_hash": "bdc1e8cb95f41c2bce592204f8c533b1"
 }
